guestbook/guestbook-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: guestbook-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-guestbook
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "guestbook.bet777.win"
  - port:
      number: 443
      name: https-guestbook
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cert-guestbook
    hosts:
    - "guestbook.bet777.win"
